--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -38,7 +38,7 @@ body {
     overflow-x: hidden;
     margin: 0;
     font-family: "Rubik", sans-serif;
-    background-color: #e5e5e5;
+    background-color: #FEFCF7;
 }
 
 :root {
@@ -74,9 +74,9 @@ body {
 }
 
 .container {
-    max-width: 1210px;
+    max-width: 1328px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
