--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -40,7 +41,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   font-family: "Rubik", sans-serif;
-  background-color: #e5e5e5;
+  background-color: #FEFCF7;
 }
 
 :root {
@@ -76,9 +77,1012 @@ body {
 }
 
 .container {
-  max-width: 1210px;
+  max-width: 1328px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.about_block {
+  border-radius: 10px;
+  text-align: center;
+}
+
+.about {
+  padding-top: 120px;
+  padding-bottom: 47px;
+  background-image: url(../img/about_tablet.png);
+  margin-left: auto;
+  margin-right: auto;
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
+.about_img {
+  margin-bottom: 24px;
+}
+
+.about_title {
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 133%;
+  margin-bottom: 16px;
+  color: #333d4b;
+}
+
+.about_text {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 167%;
+  color: #333d4b;
+}
+
+.about_item {
+  text-align: center;
+  margin-bottom: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .about {
+    background-image: url(../img/about_mobiles.png);
+    background-position: top 57px center;
+  }
+  .about_title {
+    font-size: 24px;
+    line-height: 133%;
+    text-align: start;
+  }
+  .about_text {
+    width: 282px;
+    font-size: 15px;
+    text-align: start;
+    line-height: 167%;
+  }
+  .about_item {
+    padding: 0 98px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 36px;
+  }
+}
+@media screen and (min-width: 1210px) {
+  .about {
+    background-image: url(../img/about_desctop.png);
+    background-position: top 10px center;
+  }
+  .about_title {
+    font-size: 24px;
+    text-align: center;
+    line-height: 133%;
+    margin-bottom: 24px;
+  }
+  .about_text {
+    width: 254px;
+    font-size: 15px;
+    line-height: 167%;
+    text-align: center;
+  }
+  .about_item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .about_list {
+    gap: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .about_item {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .about_item {
+    padding: 0;
+    text-align: center;
+  }
+}
+.header {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.header_btn {
+  width: 16px;
+  height: 16px;
+  border-color: transparent;
+  border: none;
+  background-repeat: no-repeat;
+  background-image: url(../img/res_2.svg);
+  cursor: pointer;
+  background-position: center;
+}
+
+.header_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header_logo {
+  display: inline-block;
+  width: 163px;
+}
+
+.header_list {
+  display: none;
+  gap: 33px;
+}
+
+@media screen and (min-width: 768px) {
+  .header_logo {
+    width: 236px;
+  }
+  .header_btn {
+    display: none;
+  }
+  .header_list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .header_block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+.header_link {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 125%;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: #83888f;
+}
+
+.hero_block {
+  padding: 100px 24px;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  background-size: cover;
+  text-align: center;
+  background-image: url(../img/hero_mobile.png);
+}
+
+.hero_title {
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 100%;
+  color: #fefcf7;
+  margin-bottom: 24px;
+}
+
+.hero_text {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 167%;
+  color: #cfcecb;
+  margin-bottom: 39px;
+}
+
+.hero_btn {
+  font-weight: 900;
+  background-color: #0E8684;
+  font-size: 18px;
+  line-height: 139%;
+  border-radius: 6px;
+  color: #fefcf7;
+  padding: 15px 31px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero_block {
+    padding: 104px 58px;
+    text-align: start;
+    background-image: url(../img/hero_tablet.png);
+  }
+  .hero_title {
+    font-size: 48px;
+    line-height: 100%;
+    width: 350px;
+  }
+  .hero_text {
+    font-size: 15px;
+    width: 398px;
+    line-height: 167%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .hero_block {
+    padding: 117px 85px;
+    text-align: start;
+    background-image: url(../../img/hero_decstob.png);
+  }
+  .hero_title {
+    font-size: 72px;
+    line-height: 100%;
+    width: 493px;
+  }
+  .hero_text {
+    font-size: 16px;
+    line-height: 162%;
+    width: 445px;
+  }
+  .hero_btn {
+    background-color: #66d2cf;
+  }
+}
+.hero {
+  padding-bottom: 120px;
+}
+
+.choose__text {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 167%;
+  text-align: center;
+  color: #fefcf7;
+}
+
+.choose {
+  padding-top: 120px;
+  padding-bottom: 147px;
+}
+
+.choose__title {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 28px;
+  line-height: 100%;
+  margin-bottom: 30px;
+  text-align: center;
+  color: #fefcf7;
+}
+
+.choose__block {
+  background-color: #2c343e;
+  padding: 67px 24px;
+  border-radius: 10px;
+  position: relative;
+}
+.choose__block::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  border-radius: 10px;
+  right: 0;
+  height: 600px;
+  background-color: #2c343e;
+  z-index: -1;
+}
+
+.choose__list {
+  padding: 0 24px;
+}
+
+.choose__item {
+  background-color: #0e8784;
+  border-radius: 8px;
+  padding: 72px 34px 51px 34px;
+  margin-bottom: 25px;
+  text-align: center;
+}
+.choose__item::before {
+  content: "";
+  width: 72px;
+  height: 72px;
+  margin-bottom: 56px;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("../../img/choose_tablet.svg");
+}
+
+.choose__sub_title {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 133%;
+  margin-bottom: 24px;
+  color: #fefcf7;
+}
+
+.choose__des {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 167%;
+  color: #fefcf7;
+}
+
+@media screen and (min-width: 768px) {
+  .choose__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: start;
+    padding: 41px 48px 41px 70px;
+    gap: 55px;
+  }
+  .choose__item::before {
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    margin-bottom: 0;
+  }
+  .choose__list {
+    padding: 0 58px;
+  }
+  .choose__block::after {
+    height: 372px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .choose__list {
+    display: grid;
+    padding: 0 85px;
+    gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .choose__text {
+    width: 540px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .choose__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    padding: 72px 48px 48px 48px;
+  }
+  .choose__block::after {
+    height: 284px;
+  }
+}
+.works {
+  padding-bottom: 144px;
+}
+
+.works_title {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 133%;
+  text-align: center;
+  color: #83888f;
+}
+
+.wrapper {
+  margin-top: 40px;
+  -webkit-perspective: 700px;
+          perspective: 700px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
+}
+
+.box {
+  width: 497px;
+  height: 2px;
+  background-color: #fdd6ba;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+.item {
+  width: 31px;
+  height: 31px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 2px solid #0e8784;
+}
+
+.item3 {
+  position: absolute;
+  right: 0;
+}
+
+.item1 {
+  position: absolute;
+  left: 0;
+}
+
+.works_img {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 72px;
+  margin-top: 80px;
+  line-height: 100%;
+  color: #fdd6ba;
+}
+
+.works_in_title {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 28px;
+  line-height: 114%;
+  margin-bottom: 24px;
+  margin-top: 24px;
+  color: #333d4b;
+}
+
+.works_in_text {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 167%;
+  color: #333d4b;
+}
+
+.works_item {
+  text-align: center;
+}
+
+.works_list {
+  margin-bottom: 56px;
+}
+
+.works_btn {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 139%;
+  color: #fefcf7;
+  padding: 15px 31px;
+  margin-left: 55px;
+  border: none;
+  border-radius: 6px;
+  background: #0e8784;
+}
+
+@media screen and (min-width: 768px) {
+  .works_title {
+    font-size: 24px;
+    line-height: 133%;
+    margin-bottom: 40px;
+  }
+  .box {
+    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .works_in_title {
+    margin-bottom: 38px;
+    font-size: 28px;
+    text-align: start;
+    line-height: 114%;
+  }
+  .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .works_img {
+    text-align: start;
+  }
+  .works_in_text {
+    font-size: 15px;
+    line-height: 167%;
+    text-align: start;
+  }
+  .works_list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+  .works_btn {
+    text-align: start;
+    margin-left: 0px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .works_title {
+    font-size: 24px;
+    line-height: 133%;
+    margin-bottom: 80px;
+    text-align: start;
+  }
+  .works_in_title {
+    font-size: 32px;
+    line-height: 112%;
+    margin-bottom: 42px;
+    width: 255px;
+  }
+  .box {
+    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .works_in_text {
+    font-size: 16px;
+    line-height: 162%;
+    width: 285px;
+    margin-bottom: 64px;
+  }
+  .works_list {
+    gap: 95px;
+  }
+  .works_btn {
+    background-color: #66d2cf;
+  }
+}
+.footer {
+  padding-bottom: 65px;
+}
+
+.footer_link {
+  font-family: var(--second-family);
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 125%;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: #83888f;
+}
+
+.footer_coment {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.fo_item {
+  margin-bottom: 24px;
+  text-align: center;
+}
+
+.footer_block {
+  padding: 54px 0 55px 0;
+  background-color: #2c343e;
+}
+
+.fot_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 24px;
+  margin-left: 105px;
+}
+
+.footer_item_1 {
+  margin-bottom: 49px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer_coment {
+    margin-bottom: 32px;
+  }
+  .footer_list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 24px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .fo_list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 33px;
+    text-align: center;
+  }
+  .fot_list {
+    margin-left: 0px;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer_block {
+    padding-top: 54px;
+    padding-bottom: 54px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .footer_block {
+    padding: 47px 87px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer_com {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 102px;
+  }
+  .fot_list {
+    margin-bottom: 0;
+  }
+  .footer_coment {
+    margin-bottom: 0;
+  }
+  .fo_item {
+    margin-bottom: 0;
+  }
+  .footer_list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 30px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+.our_img {
+  margin-bottom: 48px;
+}
+
+.our_title {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 150%;
+  text-align: center;
+  margin-bottom: 30px;
+  color: #333d4b;
+}
+
+.our_text {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 167%;
+  text-align: center;
+  color: #5b636e;
+}
+
+@media screen and (min-width: 768px) {
+  .our_block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 69px;
+    text-align: center;
+  }
+  .our_imgs {
+    width: 281px;
+    height: 470px;
+  }
+  .our_title {
+    font-size: 32px;
+    text-align: start;
+    line-height: 150%;
+    margin-bottom: 30px;
+  }
+  .our_text {
+    font-size: 15px;
+    text-align: start;
+    line-height: 167%;
+  }
+}
+.our {
+  padding-bottom: 120px;
+}
+
+@media screen and (min-width: 1210px) {
+  .our_block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 125px;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 85px;
+  }
+  .our_imgs {
+    width: 445px;
+    height: 520px;
+  }
+  .our_title {
+    font-size: 40px;
+    line-height: 120%;
+    margin-bottom: 32px;
+  }
+  .our_text {
+    font-size: 16px;
+    line-height: 162%;
+  }
+}
+@media screen and (min-width: 0px) {
+  .heros__div {
+    background-image: url(../../img/heros_desktop.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 400px;
+    border-radius: 12px;
+    padding: 111px 24px 87px 24px;
+  }
+  .heros__div .heros__text-1 {
+    font-family: "Fraunces", serif;
+    font-size: 28px;
+    font-weight: 900;
+    line-height: 28px;
+    text-align: center;
+    color: #fff;
+  }
+  .heros__div .heros__text-2 {
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 25px;
+    text-align: center;
+    margin-top: 24px;
+    color: rgba(255, 255, 255, 0.7411764706);
+  }
+}
+.heros {
+  padding-bottom: 120px;
+}
+
+@media screen and (min-width: 765px) {
+  .heros__div {
+    padding: 118px 0px 118px 58px;
+  }
+  .heros__div .heros__text-1 {
+    font-size: 34px;
+    line-height: 40px;
+    text-align: left;
+  }
+  .heros__div .heros__text-2 {
+    text-align: left;
+  }
+}
+@media screen and (min-width: 1210px) {
+  .heros__div {
+    height: 450px;
+    padding: 137px 0px 137px 85px;
+  }
+  .heros__div .heros__text-1 {
+    font-size: 40px;
+    line-height: 48px;
+  }
+}
+.quality_tx {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 28px;
+  line-height: 100%;
+  text-align: center;
+  color: #fefcf7;
+  margin-top: 64px;
+}
+
+.quality_text {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 167%;
+  text-align: center;
+  color: #fefcf7;
+  margin-top: 24px;
+  padding-bottom: 61px;
+}
+
+.quality_item {
+  text-align: center;
+  width: 279px;
+  margin: 0 auto;
+}
+
+.quality_img {
+  margin-top: -25%;
+  width: 100%;
+  height: auto;
+}
+
+.quality {
+  background-repeat: no-repeat;
+  background-image: url("../../img/quality_mobile_1.png");
+  background-size: cover;
+  border-radius: 20px;
+  padding-bottom: 59px;
+}
+
+.quality_block {
+  margin-top: 120px;
+  margin-bottom: 100px;
+}
+
+.quality__item {
+  display: none;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .quality_item {
+    width: 573px;
+  }
+  .quality_text {
+    width: 540px;
+    margin: 0 auto;
+    margin-top: 24px;
+  }
+  .quality_tx {
+    line-height: 150%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .quality_block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .quality_img {
+    display: none;
+  }
+  .quality_item {
+    background-repeat: no-repeat;
+    background-image: url("../img/our_mobile.jpg");
+    width: 300px;
+    height: 300px;
+    border-radius: 15px;
+    margin-top: -10%;
+  }
+  .quality_tx {
+    text-align: start;
+  }
+  .quality_text {
+    width: 540px;
+    text-align: start;
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 162%;
+    color: #fefcf7;
+  }
+}
+.quar_title {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 133%;
+  text-align: center;
+  margin-bottom: 72px;
+  margin-top: 59px;
+  color: #83888f;
+}
+
+.quar_item {
+  margin-bottom: 80px;
+}
+
+.quar_in_title {
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 28px;
+  line-height: 129%;
+  text-align: center;
+  margin-bottom: 22px;
+  color: #333d4b;
+}
+
+.quar_link {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  text-align: center;
+  color: #333d4b;
+  margin-bottom: 10px;
+}
+
+.quar_item {
+  text-align: center;
+}
+
+.quar_imgs {
+  margin-bottom: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .quar_title {
+    font-size: 24px;
+    margin-bottom: 72px;
+    line-height: 133%;
+    text-align: start;
+  }
+  .quar_imgs {
+    margin-bottom: 49px;
+    text-align: start;
+  }
+  .quar_in_title {
+    font-size: 24px;
+    line-height: 150%;
+    text-align: start;
+    margin-bottom: 21px;
+  }
+  .quar_list {
+    gap: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .quar_in_list {
+    text-align: start;
+  }
+  .quar_link {
+    font-size: 16px;
+    line-height: 162%;
+  }
+}
+@media screen and (min-width: 1210px) {
+  .quar_title {
+    font-size: 24px;
+    line-height: 133%;
+    margin-bottom: 72px;
+  }
+  .quar_imgs {
+    margin-bottom: 46px;
+  }
+  .quar_in_title {
+    font-size: 32px;
+    line-height: 112%;
+    margin-bottom: 24px;
+  }
+  .quar_link {
+    font-size: 16px;
+    line-height: 162%;
+  }
+  .quar_list {
+    gap: 95px;
+  }
+}
+.headquarters {
+  padding: 0 85px;
 }/*# sourceMappingURL=main.css.map */
