--- a/scss/block/_block.scss
+++ b/scss/block/_block.scss
@@ -1,1 +1,9 @@
-@import "./header"
+@import "./header";
+@import "./hero";
+@import "./choose";
+@import "./works";
+@import "./footer";
+@import "./our";
+@import "./heros";
+@import "./quality";
+@import "./headquarters";
